correcciones del docker-compose

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8082
 DB_PORT=27016
 API_NAME=plan_cuentas_mongo_crud
-SERVICE_NAME=apiSpotify
+SERVICE_NAME=api_spotify
 API_BASE_DIR=github.com/nataliasoyo
 FINANCIERA_MONGO_CRUD_PORT=8082
 RUN_MODE=dev
